recalculate Pielou and export

--- a/expertconsensus.ipynb
+++ b/expertconsensus.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,6 +515,7 @@
     "filename_list = []\n",
     "consensus_class_id_list = []\n",
     "class_count_list = []\n",
+    "bbox_list = []\n",
     "pielou_index_list = []\n",
     "\n",
     "# Loop through each group and calculate Pielou's evenness index\n",
@@ -523,7 +524,8 @@
     "    cluster_id = name[1]\n",
     "    filename = name[0]\n",
     "    #ADJUST LINE BELOW FOR SPP VS SUPERCLASS\n",
-    "    consensus_class_id = group['ref_superclass'].iloc[0]  # Assumes all consensus IDs in the group are the same\n",
+    "    consensus_bbox = group['bbox_refined'].iloc[0] \n",
+    "    consensus_class_id = group['cat_refined'].iloc[0]  # Assumes all consensus IDs in the group are the same\n",
     "    \n",
     "    # Count the number of annotations in the group\n",
     "    num_annotations = len(group)\n",
@@ -551,7 +553,8 @@
     "    cluster_id_list.append(cluster_id)\n",
     "    filename_list.append(filename)\n",
     "    consensus_class_id_list.append(consensus_class_id)\n",
-    "    agreement = class_count_list.append(class_counts)\n",
+    "    #agreement = class_count_list.append(class_counts)\n",
+    "    bbox_list.append(consensus_bbox)\n",
     "    pielou_index_list.append(evenness_index)\n",
     "\n",
     "# Create a new dataframe with the results\n",
@@ -559,9 +562,141 @@
     "    'cluster_id': cluster_id_list,\n",
     "    'filename': filename_list,\n",
     "    'consensus_class_ID': consensus_class_id_list,\n",
-    "    'agreement': class_count_list,\n",
+    "    'bbox': bbox_list,\n",
+    "    #'agreement': class_count_list,\n",
     "    'pielou_index': pielou_index_list\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cluster_id</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>consensus_class_ID</th>\n",
+       "      <th>bbox</th>\n",
+       "      <th>pielou_index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.809728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4445.5, 2719.5, 95.0, 80.5]</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4312.5, 2739.5, 98.0, 44.0]</td>\n",
+       "      <td>0.468996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3725.5, 1779.0, 73.5, 70.5]</td>\n",
+       "      <td>0.468996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3628.0, 1882.0, 92.0, 38.0]</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cluster_id                filename consensus_class_ID  \\\n",
+       "0          -1  BDA_12C_20181127_1.JPG                NaN   \n",
+       "1           0  BDA_12C_20181127_1.JPG     Canadian Goose   \n",
+       "2           1  BDA_12C_20181127_1.JPG     Canadian Goose   \n",
+       "3           2  BDA_12C_20181127_1.JPG     Canadian Goose   \n",
+       "4           3  BDA_12C_20181127_1.JPG     Canadian Goose   \n",
+       "\n",
+       "                           bbox  pielou_index  \n",
+       "0                           NaN      0.809728  \n",
+       "1  [4445.5, 2719.5, 95.0, 80.5]      0.000000  \n",
+       "2  [4312.5, 2739.5, 98.0, 44.0]      0.468996  \n",
+       "3  [3725.5, 1779.0, 73.5, 70.5]      0.468996  \n",
+       "4  [3628.0, 1882.0, 92.0, 38.0]      0.000000  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pielou.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2243\n"
+     ]
+    }
+   ],
+   "source": [
+    "export = pielou.dropna()\n",
+    "print(len(export))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "savepath = \"C:\\\\Users\\\\rowanconverse\\\\OneDrive - University of New Mexico\\\\Dissertation\\\\1_Chapter\\\\consensus\\\\data\\\\expert\"\n",
+    "export.to_csv(savepath+\"consensusLabels_agreementIndex_expertSpp.csv\")"
    ]
   },
   {
