--- a/expertconsensus.ipynb
+++ b/expertconsensus.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,6 +497,233 @@
    "source": [
     "#IOU per class\n",
     "df.groupby(\"cat_refined\")[\"IOU\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cluster_id</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>consensus_class_ID</th>\n",
+       "      <th>consensus_bbox</th>\n",
+       "      <th>num_annotations</th>\n",
+       "      <th>consensus_guesses</th>\n",
+       "      <th>correct_fraction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4445.5, 2719.5, 95.0, 80.5]</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4312.5, 2739.5, 98.0, 44.0]</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3725.5, 1779.0, 73.5, 70.5]</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3628.0, 1882.0, 92.0, 38.0]</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cluster_id                filename consensus_class_ID  \\\n",
+       "0          -1  BDA_12C_20181127_1.JPG                NaN   \n",
+       "1           0  BDA_12C_20181127_1.JPG     Canadian Goose   \n",
+       "2           1  BDA_12C_20181127_1.JPG     Canadian Goose   \n",
+       "3           2  BDA_12C_20181127_1.JPG     Canadian Goose   \n",
+       "4           3  BDA_12C_20181127_1.JPG     Canadian Goose   \n",
+       "\n",
+       "                 consensus_bbox  num_annotations  consensus_guesses  \\\n",
+       "0                           NaN               42                  0   \n",
+       "1  [4445.5, 2719.5, 95.0, 80.5]               10                 10   \n",
+       "2  [4312.5, 2739.5, 98.0, 44.0]               10                  9   \n",
+       "3  [3725.5, 1779.0, 73.5, 70.5]               10                  9   \n",
+       "4  [3628.0, 1882.0, 92.0, 38.0]                9                  9   \n",
+       "\n",
+       "   correct_fraction  \n",
+       "0               0.0  \n",
+       "1               1.0  \n",
+       "2               0.9  \n",
+       "3               0.9  \n",
+       "4               1.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#New dependent variables for image factors analysis: total number of guesses that agree with consensus, and fraction of guesses that agree with consensus\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create a dictionary to store counts of class_orig for each group\n",
+    "class_counts_dict = {}\n",
+    "\n",
+    "# Group the dataframe by image, then by cluster\n",
+    "grouped = df.groupby(['filename', 'cluster_id'])\n",
+    "\n",
+    "# Create empty lists to store the results\n",
+    "cluster_id_list = []\n",
+    "filename_list = []\n",
+    "consensus_class_id_list = []\n",
+    "consensus_bbox_list = []\n",
+    "consensus_guess_list = []\n",
+    "num_annotations_list = []\n",
+    "correct_guess_list = []\n",
+    "\n",
+    "# Loop through each group and calculate Pielou's evenness index\n",
+    "for name, group in grouped:\n",
+    "    # Get the cluster ID, filename, and consensus class ID for this group\n",
+    "    cluster_id = name[1]\n",
+    "    filename = name[0]\n",
+    "    consensus_class_id = group['cat_refined'].iloc[0]  # Assumes all consensus IDs in the group are the same\n",
+    "    consensus_bbox = group['bbox_refined'].iloc[0]\n",
+    "\n",
+    "    # Count the number of annotations in the group\n",
+    "    num_annotations = len(group)\n",
+    "\n",
+    "    # Create a list of class_orig values for this group\n",
+    "    class_orig_values = group['cat_orig'].tolist()\n",
+    "\n",
+    "    # Count the number of times each class_orig appears in this group\n",
+    "    class_counts = pd.Series(class_orig_values).value_counts()\n",
+    "\n",
+    "    # Count the number of times the consensus class appears\n",
+    "    consensus_count = class_counts.get(consensus_class_id, 0)\n",
+    "\n",
+    "    # Calculate the proportion of correct guesses\n",
+    "    proportion_correct = consensus_count / num_annotations\n",
+    "\n",
+    "    # Append the results to the lists\n",
+    "    cluster_id_list.append(cluster_id)\n",
+    "    filename_list.append(filename)\n",
+    "    consensus_class_id_list.append(consensus_class_id)\n",
+    "    consensus_bbox_list.append(consensus_bbox)\n",
+    "    num_annotations_list.append(num_annotations)\n",
+    "    consensus_guess_list.append(consensus_count)\n",
+    "    correct_guess_list.append(proportion_correct)\n",
+    "\n",
+    "# Create a new dataframe with the results\n",
+    "summary = pd.DataFrame({\n",
+    "    'cluster_id': cluster_id_list,\n",
+    "    'filename': filename_list,\n",
+    "    'consensus_class_ID': consensus_class_id_list,\n",
+    "    'consensus_bbox': consensus_bbox_list,\n",
+    "    'num_annotations': num_annotations_list,\n",
+    "    'consensus_guesses': consensus_guess_list,\n",
+    "    'correct_fraction': correct_guess_list\n",
+    "})\n",
+    "\n",
+    "# Display a sample of the result dataframe\n",
+    "summary.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19324\n",
+      "2387\n",
+      "2387\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(df))\n",
+    "print(len(grouped))\n",
+    "print(len(summary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2243\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ONLY FOR EXPORT-- drop NaN values and check length\n",
+    "export = summary.dropna()\n",
+    "print(len(export))\n",
+    "savepath = \"C:\\\\Users\\\\rowanconverse\\\\OneDrive - University of New Mexico\\\\Projects\\\\DronesForDucks\\\\Data\\\\Labels\\\\PowerAnalysis\\\\\"\n",
+    "export.to_csv(savepath+\"expertLabels_simple.csv\")"
    ]
   },
   {
